test: add essential E2E tests to the project (#90)